v1: keep release home compatible with minSdk 26